--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="./vendor.bundle.js"></script>
+    <script src="../node_modules/react/dist/react-with-addons.min.js"></script>
+    <script src="../node_modules/react-dom/dist/react-dom.min.js"></script>
     <script src="./index.bundle.js"></script>
   </body>
 </html>
